# rollout-backend

./: README.md  pyproject.toml
app/: config.py  container.py
app/domain/: commands.py  events.py
app/entrypoints/: fastapi.py
app/entrypoints/routes/: health_check.py
