[tool.poetry]
name = "rollout-backend"
version = "0.0.1"
description = ""
authors = ["Ashin <w200kr@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
sqlalchemy = "^2.0.36"
dependency-injector = "^4.42.0"
alembic = "^1.13.3"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
